<resources>
    <string name="app_name">Herbana</string>
    <string name="category">category</string>
    <string name="home">Home</string>
    <string name="back_button_description">Back to Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="click_to_login">Click to login</string>
    <string name="register_now">register now</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="bagian">Bagian:</string>
    <string name="kegunaan">kegunaan:</string>
    <string name="user_terbaru">User Terbaru</string>
    <string name="deletebutton">deletebutton</string>
    <string name="updatebutton">updatebutton</string>
    <string name="open_camera">Camera</string>
    <string name="open_gallery">Galery</string>
    <string name="image_view_desc">Deskripsi photo</string>
    <string name="camera">Camera</string>
    <string name="galeri">Galeri</string>
</resources>