<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bg_color"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/loginIcon"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/signinicon" />


    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="427dp"
        android:layout_below="@id/loginIcon"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Masuk dengan Email"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyOutlinedTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:minHeight="100dp"
                android:paddingStart="40dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyOutlinedTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            app:startIconDrawable="@drawable/icons_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/paddingtextedit" />


        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/lightgreen"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login"
            android:textSize="20sp"
            app:cornerRadius="5dp"
            app:strokeColor="#EFECEC"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/registerNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/register_now"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"

            />


    </LinearLayout>



</RelativeLayout>