<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bg_color"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/headerLayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semibold"
            android:text="Lengkapi Data\n Diri Anda"
            android:textColor="@color/white"
            android:textSize="28dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_person" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_medium"
            android:text="username"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyOutlinedTextInputLayoutStyle"
            android:layout_width="368dp"
            android:layout_height="64dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:startIconDrawable="@drawable/ic_personregister">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameregister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="Enter Your Username"
                android:inputType="textEmailAddress"
                android:minHeight="100dp"
                android:paddingStart="40dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyOutlinedTextInputLayoutStyle"
            android:layout_width="368dp"
            android:layout_height="64dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailregister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:minHeight="100dp"
                android:paddingStart="40dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyOutlinedTextInputLayoutStyle"
            android:layout_width="368dp"
            android:layout_height="64dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:startIconDrawable="@drawable/icons_password"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordregister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:minHeight="100dp"
                android:paddingStart="@dimen/paddingtextedit" /> <!-- Adjust padding as needed -->

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@+id/passwordregister"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/lightgreen"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/register"
                android:textSize="20dp"
                app:cornerRadius="5dp"
                app:strokeColor="#EFECEC"
                app:strokeWidth="1dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/loginNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="already have account"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>






</RelativeLayout>