<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:layout_gravity="top">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/f1Fragment"
                android:layout_width="match_parent"
                android:layout_height="274dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/gambar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="TODO"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_image" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/overlay_background"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/backButtonContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageButton
                            android:id="@+id/backButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/back_button_description"
                            android:minHeight="48dp"
                            android:src="@drawable/baseline_arrow_back_24"
                            tools:ignore="DuplicateSpeakableTextCheck" />

                        <TextView
                            android:id="@+id/nama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/back_button_description"
                            android:textColor="@android:color/white"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </FrameLayout>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/bagiancontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/f1Fragment"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                >


                <TextView
                    android:id="@+id/bagian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:padding="10dp"
                    android:text="@string/bagian"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/bagianguna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/kegunaancontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/bagiancontainer"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/textgunaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:padding="10dp"

                    android:text="@string/kegunaan"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/kegunaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="abc"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>





        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>